kanban-board/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

html,
body {
    width: 100%;
    height: 100%;
}

:root {
    --bg-color: #000000;
    --bg-task-color: #2a2a2a;
    --bg-button-color: #1a1a1a;
    --primary-text-color: #ececec;
    --delete-color: #ff4d4d;

    /* padding variable */
    --nav-padding: 15px 30px;
    --section-padding: 15px 30px;
    --padding-s: 5px;
    --padding-m: 10px;
    --padding-l: 15px;
    --padding-xl: 20px;
    --padding-xxl: 30px;

    /* border radius variable */
    --border-radius-s: 5px;
    --border-radius-m: 10px;
    --border-radius-l: 15px;
    --border-radius-xl: 20px;
    --border-radius-xxl: 30px;
}

body {
    background-color: var(--bg-color);
    color: var(--primary-text-color);
}

main {
    height: 100%;
    display: flex;
    flex-direction: column;
    cursor: default;
}

nav {
    height: 11%;
    padding: var(--nav-padding);
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: sticky;
    top: 0;
    background-color: var(--bg-color);
}

nav .left {
    font-size: 1.5rem;
}

nav .right button {
    font-size: 0.9rem;
    background-color: var(--bg-button-color);
    border: none;
    outline: none;
    color: var(--primary-text-color);
    padding: var(--padding-m) var(--padding-xl);
    cursor: pointer;
    border-radius: var(--border-radius-m);
}

section {
    height: 89%;
    padding: var(--section-padding);
    padding-top: 0;
    flex-grow: 1;
    display: flex;
    justify-content: space-between;
    gap: var(--padding-xxl);
}

section .task-column {
    width: 100%;
    background-color: var(--bg-button-color);
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    gap: var(--padding-m);
    border-radius: var(--border-radius-m);
    transition: all 0.7s cubic-bezier(0.19, 1, 0.22, 1);
    overflow-y: auto;
    padding-bottom: var(--padding-m);
    position: relative;
}

section .task-column::-webkit-scrollbar {
    display: none;
}

section .task-column.hover-over {
    border: 2px dashed var(--primary-text-color);
    scale: 1.04;
}

section .task-column .heading {
    border-bottom: 1px solid rgba(181, 181, 181, 0.164);
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: sticky;
    top: 0;
    padding: var(--padding-m);
    background-color: #1a1a1a7c;
    backdrop-filter: blur(5px);
    position: sticky; 
    z-index: 10;
}

section .task-column .task {
    background-color: var(--bg-task-color);
    padding: var(--padding-m);
    margin-inline: var(--padding-m);
    border-radius: var(--border-radius-m);
    display: flex;
    flex-direction: column;
    gap: var(--padding-s);
    cursor: grab;
    position: relative;
}

section .task-column .task .actions {
    position: absolute;
    top: 0.15rem;
    right: 0.25rem;
}

section .task-column .task .actions button {
    background-color: rgba(33, 33, 33, 0.723);
    padding: 0.2rem var(--padding-s);
    border-radius: var(--border-radius-s);
    color: var(--primary-text-color);
    cursor: pointer;
    border: none;
    outline: none;

    i {
        font-size: 0.7rem;
    }

}

section .task-column .task .actions .edit {
    border: 1px solid rgba(255, 255, 255, 0.151);
}

section .task-column .task .actions .delete {
    border: 1px solid rgba(253, 0, 0, 0.151);
    color: var(--delete-color);
}

.modal {
    position: fixed;
    height: 100vh;
    width: 100vw;
    top: 0;
    left: 0;
    display: none;
    align-items: center;
    justify-content: center;
}

.modal.active {
    display: flex;
}

.modal .bg {
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: rgba(61, 61, 61, 0.404);
    backdrop-filter: blur(5px);
}

.modal .center {
    width: 350px;
    background-color: var(--bg-button-color);
    padding: var(--padding-xxl);
    border-radius: var(--border-radius-m);
    display: flex;
    flex-direction: column;
    gap: var(--padding-m);
    z-index: 10;
}

.modal .center input,
textarea {
    font-size: 1rem;
    background-color: var(--bg-task-color);
    border: none;
    outline: none;
    color: var(--primary-text-color);
    padding: var(--padding-m);
    border-radius: var(--border-radius-s);
}

.modal .center button {
    font-size: 0.9rem;
    background-color: var(--bg-task-color);
    border: none;
    outline: none;
    color: var(--primary-text-color);
    padding: var(--padding-m) var(--padding-xxl);
    cursor: pointer;
    border-radius: var(--border-radius-m);
    width: fit-content;
    align-self: center;
}

@media (max-width: 480px) {
    nav{
        height: 8%;
        margin-bottom: -0.5rem;
        padding-inline: 0.75rem;
    }
    section {
        height: 92%;
        flex-direction: column;
        padding: 0.75rem;
        gap: 0.75rem;
    }

    section .task-column {
        min-height: 200px;
    }

    section .task-column .task {
        height: fit-content;
        margin-inline: var(--padding-m);
    }
}

